...
    const val SET_LIST_SELECTOR = "setListSelector"
    const val SET_LIST_ADD_POSITION = "setListSelectorAdd"
    const val EDIT_SONGS = "editSongsMenuItem"
    const val SORT_SONGS = "sortMenuItem"
    const val SETTINGS = "settingsMenuItem"
    const val OVERFLOW = "overflowMenuButton"
    const val ADD_FROM_LIST = "addFromListMenuItem"
    const val MANAGE_LISTS = "manageListsMenuItem"
    const val DRAG_HANDLE = "dragHandle"
    const val EDIT_SONG_BUTTON = "editButton"
    const val NAME_DIALOG_FIELD = "setListNameInput"
    const val NAME_DIALOG_CONFIRM = "setListNameConfirm"
    const val LOGIN_BUTTON = "login_button"
    const val SONG_TITLE = "songTitleEditText"
    const val KEY_MODE = "keyModeGroup"
    const val SAVE_SONG = "saveSongButton"
    const val SONG_KEY_LIST = "songKeyList"
...
