...
        defStyle
    ) {
        this.init()
    }

    var tagId: Int? by trackable()
    var tag: Tag? by trackable() {
        this.regularView!!.bind(it)
    }

    private var regularView: TagItemView? = null

    val isLoading: Boolean
...
