...
    <ToggleButton
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:textOff="@string/Play"
        android:textOn="@string/Pause" >
    </ToggleButton>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
...
