...
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/searchTextBox"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/SearchBoxHint"
                android:imeOptions="actionSearch"
                android:inputType="text"
...
